--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 # After installing prometheus and grafana
-# run the python scripts that reads the raw data and the second that exposes 
+# run the python scripts that read the raw data and the second that exposes 
 
 prometheus --config.file=./localdb.yml
 
 prometheus by defaul shows up in localhost:9090
 
 ------grafana----------
-For grafana, you new to start the service, in mac is
+For Grafana, you need to start the service. Example:
 brew services stopt grafana
 localhost:3000 by default
