--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # After installing prometheus and grafana
 # Run the Python scripts. The first script (ReadRawData2PrometheusFormat.py) reads the raw data (raw_log.txt ), and the second script (Expose2Localhost.py) exposes the values. 
-
+# The first script can be run `while true; do python3 ReadRawData2PrometheusFormat.py > raw_file2.txt; sleep 0.5; done`
 prometheus --config.file=./localdb.yml
 
 prometheus by default shows up in localhost:9090
