--- a/README
+++ b/README
@@ -1,9 +1,19 @@
 # After installing prometheus and grafana
 # Run the Python scripts. The first script (ReadRawData2PrometheusFormat.py) reads the raw data (raw_log.txt ), and the second script (Expose2Localhost.py) exposes the values. 
-# The first script can be run `while true; do python3 ReadRawData2PrometheusFormat.py > raw_file2.txt; sleep 0.5; done`
-prometheus --config.file=./localdb.yml
+# The first script can be run 
 
-prometheus by default shows up in localhost:9090
+In Terminal 1)
+```javascript
+while true; do python3 ReadRawData2PrometheusFormat.py > raw_file2.txt; sleep 0.5; done
+```
+In Terminal 2) 
+`python3 Expose2Localhost.py`
+
+In Terminal 3)
+`prometheus --config.file=./localdb.yml`
+
+
+prometheus, by default will shows up in localhost:9090
 
 ------grafana----------
 You need to start the Grafana service. Example:
